flux/apps/jellyseer-proxy/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyseer
  namespace: jellyseer-proxy
subsets:
  - addresses:
      - ip: 10.0.0.11
    ports:
      - name: http
        port: 5055
        protocol: TCP
