flux/apps/jellyseer-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseer
spec:
  clusterIP: None
  ports:
    - name: http
      port: 5055
      protocol: TCP
