flux/apps/jellyseer-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd

spec:
  tls:
    - hosts:
        - jellyseer.misery.systems
      secretName: jellyseer-proxy-tls
  rules:
    - host: jellyseer.misery.systems
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseer
                port:
                  name: http
